5.0.3
	+ Add missing virtual_transport = dovecot in postfix main.cf
5.0.2
	+ Definitive fix for fetchmail problems with custom systemd
	  daemon, as default init.d script seems broken
5.0.1
	+ Fix error when retrieve mail for external accounts is enabled
	+ Fix module restart in postinst
5.0
	+ Remove OpenChange integration as project is not stable yet
	+ Use system daemons instead of old custom upstart ones
	+ Update configuration to work with Postfix 3.1
	+ Integration only with external mailfilter
4.2
	+ Update version to 4.2
4.1.3
	+ Delete openchange attributes if mail account is deleted
4.1.2
	+ Configuration for openchange notifications with dovecot plugin
4.1.1
	+ Restore integration with zentyal-mailfilter
4.1
	+ Remove deprecated OpenChange notifications plugin in dovecot.conf
	+ Remove external AD integration
	+ Use always external mailfilter if configured instead of no longer
	  maintained Zentyal mailfilter module
4.0.4
	+ Revert acls changes in dovecot
	+ Enable LDAP mailquota (contribution by googley)
4.0.3
	+ Change separator in dovecot to make work shared folders in SOGo
	+ Fixing mail forwarding loop error with some isp's and fetchmail
	+ Update OpenChange proxyAddresses attribute when setting mail account
	+ In restore postpone recreation of mail directories until next
	  save change
	+ Fix log helper exception trying to retrieve vdomains from LDAP when
	  samba module is disabled
4.0.2
	+ Avoid breaking dovecot certificate when upgrading from 3.2
4.0.1
	+ Add link in mail vdomain model to openchange virtual domains settings
	+ Allow to create group alias on empty groups
	+ Removed no longer existent smtp_generic_maps
4.0
	+ Load openchange plugin if openchange enabled
	+ Added Zentyal.MailUserAddon.editFormWillRemoveAccount JS method
	+ Prepopulate installation wizard by default with the Samba domain
	+ Encrypt external accounts passwords stored in LDAP
	+ Fixed periodical removal of Trash and Spam mails