@@ -438,6 +438,18 @@ sub _addConfigurationContainers
     }
 }
 
+sub depends
+{
+    my ($self) = @_;
+    my @depends = @{ $self->SUPER::depends() };
+
+    my $mailfilter =  $self->global->modInstance('mailfilter');
+    if ($mailfilter and $mailfilter->configured()) {
+        push @depends, 'mailfilter';
+    }
+
+    return \@depends;
+}
 # Method: _getIfacesForAddress
 #
 #  This method returns all interfaces which ip address belongs
@@ -1042,6 +1054,10 @@ sub _postfixIsRunning
 sub externalFilter
 {
     my ($self) = @_;
+    my $mailfilter = EBox::Global->modInstance('mailfilter');
+    if ($mailfilter and $mailfilter->isEnabled()) {
+        return 'zentyal-mailfilter';
+    }
 
     my $filterModel = $self->model('ExternalFilter');
     return $filterModel->row()->valueByName('externalFilter');
@@ -1053,6 +1069,35 @@ sub customFilterInUse
     return $self->externalFilter() eq 'custom';
 }
 
+sub _zentyalMailfilterAttr
+{
+    my ($self, $attr) = @_;
+    my $mailfilter = EBox::Global->modInstance('mailfilter');
+    $mailfilter or
+        throw EBox::Exceptions::Internal('Mailfilter not installed');
+
+    my ($name, $attrs) = $mailfilter->mailFilter();
+    exists $attrs->{$attr}
+      or throw EBox::Exceptions::Internal("Attribute $attr does not exist");
+    return $attrs->{$attr};
+}
+
+# returns wether we must use the filter attr instead of the stored in the
+# module's cponfgiuration
+sub _useFilterAttr
+{
+    my ($self) = @_;
+
+    if (not $self->service('filter')) {
+        return 0;
+    }
+
+    if ($self->externalFilter() eq 'custom') {
+        return 0;
+    }
+
+    return 1;
+}
 # Method: ipfilter
 #
 #  This method returns the ip of the external filter
@@ -1060,6 +1105,10 @@ sub customFilterInUse
 sub ipfilter
 {
     my ($self) = @_;
+
+    if ($self->_useFilterAttr) {
+        return $self->_zentyalMailfilterAttr('address');
+    }
 
     my $filterModel = $self->model('ExternalFilter');
     return $filterModel->ipfilter();
@@ -1073,6 +1122,10 @@ sub portfilter
 {
     my ($self) = @_;
 
+    if ($self->_useFilterAttr) {
+        return $self->_zentyalMailfilterAttr('port');
+    }
+
     my $filterModel = $self->model('ExternalFilter');
     return $filterModel->portfilter();
 }
@@ -1084,6 +1137,10 @@ sub portfilter
 sub fwport
 {
     my ($self) = @_;
+
+    if ($self->_useFilterAttr) {
+        return $self->_zentyalMailfilterAttr('forwardPort');
+    }
 
     my $filterModel = $self->model('ExternalFilter');
     return $filterModel->fwport();
@@ -1469,6 +1526,12 @@ sub _filterDashboardSection
             __('Custom')));
         my $address = $self->ipfilter() . ':' . $self->portfilter();
         $section->add(new EBox::Dashboard::Value(__('Address') => $address));
+    }else {
+        $section->add(
+                new EBox::Dashboard::Value(
+                    __('Filter type') => $self->_zentyalMailfilterAttr('prettyName')
+                    )
+                );
     }
 
     return $section;
@@ -1515,6 +1578,16 @@ sub menu
                                       'order' => 5,
                  )
     );
+
+    # add filterproviders menu items
+    my $global = EBox::Global->getInstance(1);
+    my @mods = @{$global->modInstancesOfType('EBox::Mail::FilterProvider')};
+    foreach my $mod (@mods) {
+        my $menuItem = $mod->mailMenuItem();
+        defined $menuItem
+          or next;
+        $folder->add($menuItem);
+    }
 
     $root->add($folder);
 }
