@@ -1,3 +1,5 @@
+HEAD
+	+ Integration with mailfilter module
 5.0.3
 	+ Add missing virtual_transport = dovecot in postfix main.cf
 5.0.2
